added case studies w SOGAsmooth + fix in SOGAtruncate

--- a/src/Test Benchmarks.ipynb
+++ b/src/Test Benchmarks.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "from sogaPreprocessor import *\n",
     "from producecfg import *\n",
-    "from libSOGA import *\n",
     "from libSOGAsmoother import *\n",
     "\n",
     "torch.set_default_dtype(torch.float64)"
@@ -25,25 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a79b393d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m compiled \u001b[38;5;241m=\u001b[39m compile2SOGA(file)\n\u001b[0;32m      4\u001b[0m cfg \u001b[38;5;241m=\u001b[39m produce_cfg(compiled)\n\u001b[1;32m----> 5\u001b[0m output \u001b[38;5;241m=\u001b[39m start_SOGA_smooth(cfg)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(output\u001b[38;5;241m.\u001b[39mvar_list)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(output\u001b[38;5;241m.\u001b[39mgm\u001b[38;5;241m.\u001b[39mmean())\n",
-      "File \u001b[1;32mc:\\Users\\birik\\github\\SOGA\\src\\libSOGAsmoother.py:235\u001b[0m, in \u001b[0;36mstart_SOGA_smooth\u001b[1;34m(cfg, params_dict, pruning, Kmax, parallel)\u001b[0m\n\u001b[0;32m    233\u001b[0m \u001b[38;5;66;03m# executes SOGA on nodes on exec_queue\u001b[39;00m\n\u001b[0;32m    234\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;28mlen\u001b[39m(exec_queue)\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m--> 235\u001b[0m     SOGAsmooth(exec_queue\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;241m0\u001b[39m), smoothed_vars, data, parallel, exec_queue, params_dict)\n\u001b[0;32m    237\u001b[0m \u001b[38;5;66;03m# returns output distribution\u001b[39;00m\n\u001b[0;32m    238\u001b[0m p, current_dist \u001b[38;5;241m=\u001b[39m merge(cfg\u001b[38;5;241m.\u001b[39mnode_list[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mlist_dist)\n",
-      "File \u001b[1;32mc:\\Users\\birik\\github\\SOGA\\src\\libSOGAsmoother.py:320\u001b[0m, in \u001b[0;36mSOGAsmooth\u001b[1;34m(node, smoothed_vars, data, parallel, exec_queue, params_dict)\u001b[0m\n\u001b[0;32m    318\u001b[0m     updated_dist \u001b[38;5;241m=\u001b[39m update_rule(current_dist, node\u001b[38;5;241m.\u001b[39msmooth, data, params_dict)         \u001b[38;5;66;03m### see libSOGAupdate\u001b[39;00m\n\u001b[0;32m    319\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 320\u001b[0m     updated_dist \u001b[38;5;241m=\u001b[39m update_rule(current_dist, node\u001b[38;5;241m.\u001b[39mexpr, data, params_dict)\n\u001b[0;32m    322\u001b[0m \u001b[38;5;66;03m# smoothing\u001b[39;00m\n\u001b[0;32m    323\u001b[0m smooth_flag \u001b[38;5;241m=\u001b[39m check_dist_non_deg(updated_dist)\n",
-      "File \u001b[1;32mc:\\Users\\birik\\github\\SOGA\\src\\libSOGAupdate.py:114\u001b[0m, in \u001b[0;36mupdate_rule\u001b[1;34m(dist, expr, data, params_dict)\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m     rule_func \u001b[38;5;241m=\u001b[39m asgmt_parse(dist\u001b[38;5;241m.\u001b[39mvar_list, expr, data, params_dict)    \n\u001b[1;32m--> 114\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rule_func(dist)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#program = 'ClickGraph'\n",
     "#file = '../programs/SOGA/' + program + '.soga'\n",
@@ -57,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "845825e8",
    "metadata": {},
    "outputs": [
@@ -66,34 +50,34 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "BayesPointMachine| time: 0.06 | mean: tensor([ 0.0112, -0.1202, -0.2778, -4.1395, -2.8643, -4.7677, -2.9070, -2.1989,\n",
+      "BayesPointMachine| time: 0.08 | mean: tensor([ 0.0112, -0.1202, -0.2778, -4.1395, -2.8643, -4.7677, -2.9070, -2.1989,\n",
       "        -4.8623]) | var_list: ['w[0]', 'w[1]', 'w[2]', 'mean[0]', 'mean[1]', 'mean[2]', 'mean[3]', 'mean[4]', 'mean[5]']\n",
       "\n",
-      "Bernoulli| time: 0.17 | mean: tensor([0.2519, 1.0000]) | var_list: ['theta', 'y']\n",
+      "Bernoulli| time: 0.22 | mean: tensor([0.2519, 1.0000]) | var_list: ['theta', 'y']\n",
       "\n",
-      "Burglar| time: 0.13 | mean: tensor([2.8221e-04, 2.9934e-03, 3.2788e-03, 1.0000e+00, 1.0000e+00, 1.0000e+00]) | var_list: ['earthquake', 'burglary', 'alarm', 'phoneWorking', 'maryWakes', 'called']\n",
+      "Burglar| time: 0.2 | mean: tensor([2.8221e-04, 2.9934e-03, 3.2788e-03, 1.0000e+00, 1.0000e+00, 1.0000e+00]) | var_list: ['earthquake', 'burglary', 'alarm', 'phoneWorking', 'maryWakes', 'called']\n",
       "\n",
-      "ClinicalTrial| time: 0.42 | mean: tensor([0.7531, 0.6606, 0.3399, 0.0000, 1.0000]) | var_list: ['isEff', 'probTreated', 'probContr', 'ycontr', 'ytreat']\n",
+      "ClinicalTrial| time: 0.6 | mean: tensor([0.7531, 0.6606, 0.3399, 0.0000, 1.0000]) | var_list: ['isEff', 'probTreated', 'probContr', 'ycontr', 'ytreat']\n",
       "\n",
-      "CoinBias| time: 0.11 | mean: tensor([0.4249, 0.0000]) | var_list: ['bias', 'y']\n",
+      "CoinBias| time: 0.13 | mean: tensor([0.4221, 0.0000]) | var_list: ['bias', 'y']\n",
       "\n",
-      "Grass| time: 0.29 | mean: tensor([0.5758, 0.7079, 0.4298, 0.7000, 0.4955, 0.9583, 0.9305, 0.6954, 0.4172,\n",
+      "Grass| time: 0.43 | mean: tensor([0.5758, 0.7079, 0.4298, 0.7000, 0.4955, 0.9583, 0.9305, 0.6954, 0.4172,\n",
       "        1.0000]) | var_list: ['cloudy', 'rain', 'sprinkler', 'temp1', 'wetRoof', 'temp2', 'temp3', 'or1', 'or2', 'wetGrass']\n",
       "\n",
-      "MurderMistery| time: 0.03 | mean: tensor([0.0158, 1.0000]) | var_list: ['aliceDunnit', 'withGun']\n",
+      "MurderMistery| time: 0.04 | mean: tensor([0.0158, 1.0000]) | var_list: ['aliceDunnit', 'withGun']\n",
       "\n",
-      "NoisyOr| time: 0.31 | mean: tensor([0.5000, 0.5000, 0.4500, 0.4500, 0.4500, 0.4500, 0.6975, 0.4150, 0.5882,\n",
+      "NoisyOr| time: 0.39 | mean: tensor([0.5000, 0.5000, 0.4500, 0.4500, 0.4500, 0.4500, 0.6975, 0.4150, 0.5882,\n",
       "        0.8144]) | var_list: ['n0', 'n4', 'n1', 'n21', 'n22', 'n33', 'n2', 'n31', 'n32', 'n3']\n",
       "\n",
-      "SurveyUnbias| time: 0.11 | mean: tensor([0.7988, 0.5004, 1.0000, 1.0000]) | var_list: ['bias1', 'bias2', 'ansb1', 'ansb2']\n",
+      "SurveyUnbias| time: 0.16 | mean: tensor([0.7988, 0.5004, 1.0000, 1.0000]) | var_list: ['bias1', 'bias2', 'ansb1', 'ansb2']\n",
       "\n",
-      "ThreeCoins| time: 0.02 | mean: tensor([0.7500, 0.7500, 0.7500, 2.2500]) | var_list: ['a', 'b', 'c', 'sum']\n",
+      "ThreeCoins| time: 0.04 | mean: tensor([0.7500, 0.7500, 0.7500, 2.2500]) | var_list: ['a', 'b', 'c', 'sum']\n",
       "\n",
       "TrueSkills| time: 0.03 | mean: tensor([104.7132,  97.6099,  97.6769, 115.3178,  92.2321,  92.4501]) | var_list: ['skillA', 'skillB', 'skillC', 'perfA', 'perfB', 'perfC']\n",
       "\n",
       "TwoCoins| time: 0.06 | mean: tensor([0.3333, 0.3333, 0.0000]) | var_list: ['first', 'second', 'both']\n",
       "\n",
-      "AQUA/Altermu| time: 0.32 | mean: tensor([-2.5725e+00,  3.3806e-01,  2.7176e+00,  1.0986e+00,  2.8560e+00,\n",
+      "AQUA/Altermu| time: 0.3 | mean: tensor([-2.5725e+00,  3.3806e-01,  2.7176e+00,  1.0986e+00,  2.8560e+00,\n",
       "        -9.1651e-01,  1.5555e-01, -2.6816e+00,  2.4704e+00,  3.4746e+00,\n",
       "         1.6395e+00, -1.3215e+00,  2.6419e+00,  3.0358e-01, -4.0955e+00,\n",
       "        -1.5071e+00, -9.9518e-01, -2.0649e+00, -2.4032e+00,  3.4638e+00,\n",
@@ -103,14 +87,14 @@
       "        -2.0642e+00, -4.5841e-02,  1.9340e+00,  1.0769e+00, -9.8379e-02,\n",
       "         0.0000e+00,  0.0000e+00, -1.3789e-03,  3.1164e-01]) | var_list: ['y[0]', 'y[1]', 'y[2]', 'y[3]', 'y[4]', 'y[5]', 'y[6]', 'y[7]', 'y[8]', 'y[9]', 'y[10]', 'y[11]', 'y[12]', 'y[13]', 'y[14]', 'y[15]', 'y[16]', 'y[17]', 'y[18]', 'y[19]', 'y[20]', 'y[21]', 'y[22]', 'y[23]', 'y[24]', 'y[25]', 'y[26]', 'y[27]', 'y[28]', 'y[29]', 'y[30]', 'y[31]', 'y[32]', 'y[33]', 'y[34]', 'y[35]', 'y[36]', 'y[37]', 'y[38]', 'y[39]', 'w1', 'w2', 'w3', 'mean']\n",
       "\n",
-      "AQUA/Altermu2| time: 0.29 | mean: tensor([-2.5725,  0.3381,  2.7176,  1.0986,  2.8560, -0.9165,  0.1556, -2.6816,\n",
+      "AQUA/Altermu2| time: 0.32 | mean: tensor([-2.5725,  0.3381,  2.7176,  1.0986,  2.8560, -0.9165,  0.1556, -2.6816,\n",
       "         2.4704,  3.4746,  1.6395, -1.3215,  2.6419,  0.3036, -4.0955, -1.5071,\n",
       "        -0.9952, -2.0649, -2.4032,  3.4638,  0.9117,  1.1822,  0.0424, -0.5282,\n",
       "         1.1555, -1.6275,  0.7147, -1.0846,  4.6602,  1.2456, -0.6797,  0.9346,\n",
       "         1.1819, -1.4950,  2.4476, -2.0642, -0.0458,  1.9340,  1.0769, -0.0984,\n",
       "         0.1556,  0.1556]) | var_list: ['y[0]', 'y[1]', 'y[2]', 'y[3]', 'y[4]', 'y[5]', 'y[6]', 'y[7]', 'y[8]', 'y[9]', 'y[10]', 'y[11]', 'y[12]', 'y[13]', 'y[14]', 'y[15]', 'y[16]', 'y[17]', 'y[18]', 'y[19]', 'y[20]', 'y[21]', 'y[22]', 'y[23]', 'y[24]', 'y[25]', 'y[26]', 'y[27]', 'y[28]', 'y[29]', 'y[30]', 'y[31]', 'y[32]', 'y[33]', 'y[34]', 'y[35]', 'y[36]', 'y[37]', 'y[38]', 'y[39]', 'w1', 'w2']\n",
       "\n",
-      "AQUA/RadarQuery| time: 0.87 | mean: tensor([ 1.0000,  1.0000,  5.9404,  5.9404, -1.6596,  0.3319,  0.8333,  5.0000,\n",
+      "AQUA/RadarQuery| time: 0.93 | mean: tensor([ 1.0000,  1.0000,  5.9404,  5.9404, -1.6596,  0.3319,  0.8333,  5.0000,\n",
       "         4.6127]) | var_list: ['b0', 'b1', 'x0', 'x1', 'x', 'y', 'flip', 'o0', 'o1']\n",
       "\n",
       "AQUA/TimeSeries| time: 0.45 | mean: tensor([-1.6016,  0.6952,  0.4535, -1.0907, -2.4951, -2.0792, -3.3462, -3.2191,\n",
@@ -125,7 +109,6 @@
    "source": [
     "from sogaPreprocessor import *\n",
     "from producecfg import *\n",
-    "from libSOGA import *\n",
     "from libSOGAsmoother import *\n",
     "import time\n",
     "\n",
@@ -163,12 +146,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "000ed266",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "BayesPointMachine| time: 0.18 | mean: [ 0.01117781 -0.12016474 -0.27778036 -4.13952624 -2.86434177 -4.76773406\n",
+    " -2.90703202 -2.19885417 -4.86233859] | var_list: ['w[0]', 'w[1]', 'w[2]', 'mean[0]', 'mean[1]', 'mean[2]', 'mean[3]', 'mean[4]', 'mean[5]']\n",
+    "\n",
+    "Bernoulli| time: 21.63 | mean: [0.2568569 1.       ] | var_list: ['theta', 'y']\n",
+    "\n",
+    "Burglar| time: 0.04 | mean: [2.82212318e-04 2.99344924e-03 3.27537935e-03 1.00000000e+00\n",
+    " 1.00000000e+00 1.00000000e+00] | var_list: ['earthquake', 'burglary', 'alarm', 'phoneWorking', 'maryWakes', 'called']\n",
+    "\n",
+    "ClinicalTrial| time: 47.36 | mean: [0.75341998 0.65794587 0.34258052 0.         1.        ] | var_list: ['isEff', 'probTreated', 'probContr', 'ycontr', 'ytreat']\n",
+    "\n",
+    "CoinBias| time: 0.56 | mean: [0.42600849 0.        ] | var_list: ['bias', 'y']\n",
+    "\n",
+    "Grass| time: 0.07 | mean: [0.57579972 0.70792768 0.42976356 0.7        0.49554937 0.95827538\n",
+    " 0.93045897 0.69541029 0.41724618 1.        ] | var_list: ['cloudy', 'rain', 'sprinkler', 'temp1', 'wetRoof', 'temp2', 'temp3', 'or1', 'or2', 'wetGrass']\n",
+    "\n",
+    "MurderMistery| time: 0.01 | mean: [0.01581722 1.        ] | var_list: ['aliceDunnit', 'withGun']\n",
+    "\n",
+    "NoisyOr| time: 0.2 | mean: [0.5        0.5        0.45       0.45       0.45       0.45\n",
+    " 0.6975     0.415      0.58825    0.81441875] | var_list: ['n0', 'n4', 'n1', 'n21', 'n22', 'n33', 'n2', 'n31', 'n32', 'n3']\n",
+    "\n",
+    "SurveyUnbias| time: 1.35 | mean: [0.79946436 0.50043923 1.         1.        ] | var_list: ['bias1', 'bias2', 'ansb1', 'ansb2']\n",
+    "\n",
+    "ThreeCoins| time: 0.01 | mean: [0.75 0.75 0.75] | var_list: ['a', 'b', 'c']\n",
+    "\n",
+    "TrueSkills| time: 0.02 | mean: [104.7131673   97.60989202  97.67694068 115.31779373  92.23214907\n",
+    "  92.4500572 ] | var_list: ['skillA', 'skillB', 'skillC', 'perfA', 'perfB', 'perfC']\n",
+    "\n",
+    "TwoCoins| time: 0.02 | mean: [0.33333333 0.33333333 0.        ] | var_list: ['first', 'second', 'both']\n",
+    "\n",
+    "AQUA/Altermu| time: 0.27 | mean: [-2.57251482e+00  3.38062060e-01  2.71757796e+00  1.09861336e+00\n",
+    "  2.85603752e+00 -9.16513510e-01  1.55551270e-01 -2.68160347e+00\n",
+    "  2.47043789e+00  3.47459025e+00  1.63949862e+00 -1.32148757e+00\n",
+    "  2.64187513e+00  3.03578480e-01 -4.09546231e+00 -1.50709863e+00\n",
+    " -9.95178660e-01 -2.06488920e+00 -2.40317949e+00  3.46383544e+00\n",
+    "  9.11736960e-01  1.18222221e+00  4.23572200e-02 -5.28151710e-01\n",
+    "  1.15551598e+00 -1.62749724e+00  7.14732370e-01 -1.08458812e+00\n",
+    "  4.66020296e+00  1.24563831e+00 -6.79708620e-01  9.34616810e-01\n",
+    "  1.18187607e+00 -1.49501051e+00  2.44755622e+00 -2.06424237e+00\n",
+    " -4.58407400e-02  1.93396696e+00  1.07685273e+00 -9.83790700e-02\n",
+    "  0.00000000e+00  0.00000000e+00 -1.37893048e-03  3.11638290e-01] | var_list: ['y[0]', 'y[1]', 'y[2]', 'y[3]', 'y[4]', 'y[5]', 'y[6]', 'y[7]', 'y[8]', 'y[9]', 'y[10]', 'y[11]', 'y[12]', 'y[13]', 'y[14]', 'y[15]', 'y[16]', 'y[17]', 'y[18]', 'y[19]', 'y[20]', 'y[21]', 'y[22]', 'y[23]', 'y[24]', 'y[25]', 'y[26]', 'y[27]', 'y[28]', 'y[29]', 'y[30]', 'y[31]', 'y[32]', 'y[33]', 'y[34]', 'y[35]', 'y[36]', 'y[37]', 'y[38]', 'y[39]', 'w1', 'w2', 'w3', 'mean']\n",
+    "\n",
+    "AQUA/Altermu2| time: 0.19 | mean: [-2.57251482  0.33806206  2.71757796  1.09861336  2.85603752 -0.91651351\n",
+    "  0.15555127 -2.68160347  2.47043789  3.47459025  1.63949862 -1.32148757\n",
+    "  2.64187513  0.30357848 -4.09546231 -1.50709863 -0.99517866 -2.0648892\n",
+    " -2.40317949  3.46383544  0.91173696  1.18222221  0.04235722 -0.52815171\n",
+    "  1.15551598 -1.62749724  0.71473237 -1.08458812  4.66020296  1.24563831\n",
+    " -0.67970862  0.93461681  1.18187607 -1.49501051  2.44755622 -2.06424237\n",
+    " -0.04584074  1.93396696  1.07685273 -0.09837907  0.1556079   0.1556079 ] | var_list: ['y[0]', 'y[1]', 'y[2]', 'y[3]', 'y[4]', 'y[5]', 'y[6]', 'y[7]', 'y[8]', 'y[9]', 'y[10]', 'y[11]', 'y[12]', 'y[13]', 'y[14]', 'y[15]', 'y[16]', 'y[17]', 'y[18]', 'y[19]', 'y[20]', 'y[21]', 'y[22]', 'y[23]', 'y[24]', 'y[25]', 'y[26]', 'y[27]', 'y[28]', 'y[29]', 'y[30]', 'y[31]', 'y[32]', 'y[33]', 'y[34]', 'y[35]', 'y[36]', 'y[37]', 'y[38]', 'y[39]', 'w1', 'w2']\n",
+    "\n",
+    "AQUA/RadarQuery| time: 17.48 | mean: [ 0.2         0.36        5.19961521  5.19961521 -1.65956536  1.18160201\n",
+    "  0.6199988   5.          4.72166135] | var_list: ['b0', 'b1', 'x0', 'x1', 'x', 'y', 'flip', 'o0', 'o1']\n",
+    "\n",
+    "AQUA/TimeSeries| time: 0.43 | mean: [-1.60828345  0.70074326  0.44734169 -1.09070023 -2.49513229 -2.07918899\n",
+    " -3.34621083 -3.21905762 -3.8483514  -4.1459158  -2.17085703 -2.7298601\n",
+    " -2.35417404 -3.05798313 -2.85360404 -2.9261493  -2.67713445 -2.97731975\n",
+    " -4.75105001 -3.29399034 -4.11626048 -4.08086402 -3.34743298 -3.5929497\n",
+    " -1.7048937  -3.52291184 -4.13944649 -4.04992281 -3.71707286 -2.68302052\n",
+    " -3.21920266 -1.78221835 -1.71385612 -3.15284682 -3.26094915 -2.92240028\n",
+    " -2.40186353 -3.16973318 -4.00540748 -2.32625323 -1.74827635 -1.05716215\n",
+    " -3.44536781] | var_list: ['a', 'b', 'lamb', 'y0', 'y1', 'y2', 'y3', 'y4', 'y5', 'y6', 'y7', 'y8', 'y9', 'y10', 'y11', 'y12', 'y13', 'y14', 'y15', 'y16', 'y17', 'y18', 'y19', 'y20', 'y21', 'y22', 'y23', 'y24', 'y25', 'y26', 'y27', 'y28', 'y29', 'y30', 'y31', 'y32', 'y33', 'y34', 'y35', 'y36', 'y37', 'y38', 'y39']"
+   ]
   }
  ],
  "metadata": {
