Added Lotka Volterra Case Study

--- a/src/CaseStudy5-BNN.ipynb
+++ b/src/CaseStudy5-BNN.ipynb
@@ -14,16 +14,7 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from sogaPreprocessor import *\n",
         "from producecfg import *\n",
@@ -44,7 +35,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "sample: 100%|██████████| 3000/3000 [00:01<00:00, 2557.52it/s, 31 steps of size 1.12e-01. acc. prob=0.81]\n"
+            "sample: 100%|██████████| 3000/3000 [00:03<00:00, 886.01it/s, 15 steps of size 1.86e-01. acc. prob=0.78] \n"
           ]
         },
         {
@@ -53,21 +44,21 @@
           "text": [
             "\n",
             "                mean       std    median      5.0%     95.0%     n_eff     r_hat\n",
-            "  prec_obs      1.09      0.38      1.03      0.49      1.67     25.41      1.05\n",
-            "   w1[0,0]     -0.14      0.93     -0.11     -1.70      1.33    929.04      1.00\n",
-            "   w1[0,1]     -0.29      0.93     -0.35     -1.62      1.32    128.60      1.02\n",
-            "   w1[1,0]      0.21      1.07      0.22     -1.37      2.26     47.76      1.02\n",
-            "   w1[1,1]      0.19      1.17      0.09     -1.48      2.19     31.67      1.04\n",
-            "   w2[0,0]     -0.09      0.94     -0.08     -1.74      1.36    922.71      1.00\n",
-            "   w2[0,1]      0.05      1.05     -0.00     -1.63      1.83     45.04      1.03\n",
-            "   w2[1,0]      0.14      1.17      0.07     -1.75      1.83     33.45      1.04\n",
-            "   w2[1,1]     -0.23      1.04     -0.21     -1.91      1.45    135.33      1.00\n",
-            "   w3[0,0]     -0.26      1.05     -0.21     -2.01      1.47     48.08      1.03\n",
-            "   w3[1,0]      0.02      1.00     -0.01     -1.59      1.56     84.05      1.03\n",
+            "  prec_obs      1.01      0.29      0.99      0.53      1.48   1459.66      1.00\n",
+            "   w1[0,0]     -0.18      1.01     -0.24     -1.84      1.43   1153.05      1.00\n",
+            "   w1[0,1]     -0.18      0.97     -0.18     -1.74      1.52    628.04      1.00\n",
+            "   w1[1,0]     -0.02      0.95     -0.02     -1.62      1.44    841.15      1.00\n",
+            "   w1[1,1]     -0.03      0.93     -0.04     -1.40      1.64    903.38      1.00\n",
+            "   w2[0,0]     -0.14      0.96     -0.13     -1.80      1.38    966.95      1.00\n",
+            "   w2[0,1]     -0.16      1.01     -0.18     -1.71      1.58    938.67      1.00\n",
+            "   w2[1,0]     -0.10      0.92     -0.10     -1.58      1.49   1109.30      1.00\n",
+            "   w2[1,1]     -0.09      0.99     -0.10     -1.71      1.54    711.64      1.00\n",
+            "   w3[0,0]     -0.10      0.92     -0.10     -1.53      1.53    657.53      1.00\n",
+            "   w3[1,0]     -0.11      0.96     -0.10     -1.72      1.46   1207.36      1.00\n",
             "\n",
-            "Number of divergences: 43\n",
+            "Number of divergences: 29\n",
             "\n",
-            "MCMC elapsed time: 3.5735161304473877\n"
+            "MCMC elapsed time: 6.218445539474487\n"
           ]
         }
       ],
@@ -323,14 +314,20 @@
       "metadata": {},
       "outputs": [
         {
-          "ename": "",
+          "ename": "KeyboardInterrupt",
           "evalue": "",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[7], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m pars\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m     11\u001b[0m     params_dict[key] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(value, requires_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)    \n\u001b[1;32m---> 13\u001b[0m output_dist \u001b[38;5;241m=\u001b[39m start_SOGA(cfg, params_dict)\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGA.py:55\u001b[0m, in \u001b[0;36mstart_SOGA\u001b[1;34m(cfg, params_dict, pruning, Kmax, parallel, useR)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;66;03m# executes SOGA on nodes on exec_queue\u001b[39;00m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;28mlen\u001b[39m(exec_queue)\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m---> 55\u001b[0m     SOGA(exec_queue\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;241m0\u001b[39m), data, parallel, exec_queue, params_dict)\n\u001b[0;32m     57\u001b[0m \u001b[38;5;66;03m# returns output distribution\u001b[39;00m\n\u001b[0;32m     58\u001b[0m p, current_dist \u001b[38;5;241m=\u001b[39m merge(cfg\u001b[38;5;241m.\u001b[39mnode_list[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mlist_dist)\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGA.py:134\u001b[0m, in \u001b[0;36mSOGA\u001b[1;34m(node, data, parallel, exec_queue, params_dict)\u001b[0m\n\u001b[0;32m    130\u001b[0m     current_trunc \u001b[38;5;241m=\u001b[39m negate(current_trunc) \n\u001b[0;32m    131\u001b[0m \u001b[38;5;66;03m# if parallel is not None and parallel >1:\u001b[39;00m\n\u001b[0;32m    132\u001b[0m \u001b[38;5;66;03m#     p, current_dist = parallel_truncate(current_dist, current_trunc, data, parallel)   \u001b[39;00m\n\u001b[0;32m    133\u001b[0m \u001b[38;5;66;03m# else:\u001b[39;00m\n\u001b[1;32m--> 134\u001b[0m p, current_dist \u001b[38;5;241m=\u001b[39m truncate(current_dist, current_trunc, data, params_dict)     \u001b[38;5;66;03m### see libSOGAtruncate\u001b[39;00m\n\u001b[0;32m    135\u001b[0m current_trunc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    136\u001b[0m current_p \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m*\u001b[39mcurrent_p\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGAtruncate.py:361\u001b[0m, in \u001b[0;36mtruncate\u001b[1;34m(dist, trunc, data, params_dict)\u001b[0m\n\u001b[0;32m    359\u001b[0m trunc_rule \u001b[38;5;241m=\u001b[39m trunc_parse(dist\u001b[38;5;241m.\u001b[39mvar_list, trunc, data, params_dict)\n\u001b[0;32m    360\u001b[0m trunc_func \u001b[38;5;241m=\u001b[39m trunc_rule\u001b[38;5;241m.\u001b[39mfunc\n\u001b[1;32m--> 361\u001b[0m norm_fact, new_dist \u001b[38;5;241m=\u001b[39m trunc_func(dist)\n\u001b[0;32m    362\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m norm_fact, new_dist\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGAtruncate.py:106\u001b[0m, in \u001b[0;36mineq_func\u001b[1;34m(self, dist)\u001b[0m\n\u001b[0;32m    101\u001b[0m     b[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m ineq_const   \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m# STEP 3: compute moments in the transformed coordinates\u001b[39;00m\n\u001b[0;32m    104\u001b[0m \u001b[38;5;66;03m# some components might have 0 prob in the truncation\u001b[39;00m\n\u001b[0;32m    105\u001b[0m \u001b[38;5;66;03m# indexes contains the indexes of the components that have non-zero probability\u001b[39;00m\n\u001b[1;32m--> 106\u001b[0m new_P, new_transl_mu, new_transl_sigma, indexes \u001b[38;5;241m=\u001b[39m compute_moments(transl_mu, transl_sigma, a, b)\n\u001b[0;32m    107\u001b[0m \u001b[38;5;66;03m# if the whole distribution has zero prob in the truncation\u001b[39;00m\n\u001b[0;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(indexes) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGAtruncate.py:430\u001b[0m, in \u001b[0;36mcompute_moments\u001b[1;34m(mu, sigma, a, b, idx)\u001b[0m\n\u001b[0;32m    427\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trunc:\n\u001b[0;32m    428\u001b[0m     \u001b[38;5;66;03m# returns the moments for the distribution of dimension n-1, in which the trunc_idx component has been removed\u001b[39;00m\n\u001b[0;32m    429\u001b[0m     muj \u001b[38;5;241m=\u001b[39m compute_lower_mom(mu[indexes], sigma[indexes], a, b, trunc)\n\u001b[1;32m--> 430\u001b[0m     new_sigma \u001b[38;5;241m=\u001b[39m compute_mom2(mu[indexes], sigma[indexes], a, b, trunc, new_P[indexes], new_mu, muj)\n\u001b[0;32m    431\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# and_func\u001b[39;00m\n\u001b[0;32m    432\u001b[0m     new_sigma \u001b[38;5;241m=\u001b[39m compute_mom2_and(mu[indexes], sigma[indexes], a, b, new_P[indexes], new_mu, idx)\n",
+            "File \u001b[1;32mc:\\Users\\birik\\github\\DeGAS\\src\\libSOGAtruncate.py:490\u001b[0m, in \u001b[0;36mcompute_mom2\u001b[1;34m(mu, sigma, a, b, trunc, new_P, new_mu, muj)\u001b[0m\n\u001b[0;32m    488\u001b[0m     C[:,:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnorm\u001b[38;5;241m.\u001b[39mlog_prob(b[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m.\u001b[39mexp()\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(b[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39me0)\u001b[38;5;241m*\u001b[39mtorch\u001b[38;5;241m.\u001b[39mhstack((torch\u001b[38;5;241m.\u001b[39mones((c,\u001b[38;5;241m1\u001b[39m)), muj))\n\u001b[0;32m    489\u001b[0m \u001b[38;5;66;03m# computes the new matrix\u001b[39;00m\n\u001b[1;32m--> 490\u001b[0m new_sigma \u001b[38;5;241m=\u001b[39m new_P\u001b[38;5;241m.\u001b[39mview(c,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39mtorch\u001b[38;5;241m.\u001b[39mmatmul(mu\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m2\u001b[39m), new_mu\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)) \u001b[38;5;241m+\u001b[39m torch\u001b[38;5;241m.\u001b[39mmatmul(sigma, C\u001b[38;5;241m.\u001b[39mtranspose(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m    491\u001b[0m new_sigma \u001b[38;5;241m=\u001b[39m new_sigma\u001b[38;5;241m/\u001b[39mnew_P\u001b[38;5;241m.\u001b[39mview(c,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m-\u001b[39m torch\u001b[38;5;241m.\u001b[39mmatmul(new_mu\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m2\u001b[39m), new_mu\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m    492\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m new_sigma\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -358,11 +355,18 @@
         "#sigma_y_pred = np.sqrt(params_dict['sigmay'].detach().numpy()**2 + (X.detach().numpy()*params_dict['sigmaw'].detach().numpy())**2 + params_dict['sigmab'].detach().numpy()**2)\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "simple_env",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -376,7 +380,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
