Deleted print and corrected check_dist_non_deg
Bayesian Lotka Volterra needs debugging

--- a/src/Case Study - Lotka Volterra.ipynb
+++ b/src/Case Study - Lotka Volterra.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "9439abab",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
     "\n",
     "def plot_mean_and_std(x, y, x_std, y_std, label_x, label_y):\n",
     "    \n",
-    "    t = np.linspace(0, 3, len(x_soga))\n",
+    "    t = np.linspace(0, 3, len(x))\n",
     "\n",
     "    plt.plot(t, x, label=label_x, color='blue')\n",
     "    plt.fill_between(t, np.array(x) - np.array(x_std), np.array(x) + np.array(x_std), color='blue', alpha=0.3)\n",
