--- a/src/CaseStudy4-BayesianRegression.ipynb
+++ b/src/CaseStudy4-BayesianRegression.ipynb
@@ -976,7 +976,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "simple_env",
    "language": "python",
    "name": "python3"
   },
@@ -990,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
