New smoother (needs more testing)

--- a/src/Debug.ipynb
+++ b/src/Debug.ipynb
@@ -4,23 +4,68 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sogaPreprocessor'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msogaPreprocessor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mproducecfg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlibSOGAsmoother\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sogaPreprocessor'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sogaPreprocessor import *\n",
     "from producecfg import *\n",
-    "from libSOGAsmoother import *"
+    "from smoothcfg import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compiledFile=compile2SOGA_text('x = gm([0.5, 0.5], [0., 1.], [0., 0.]); y = x + gm([1.], [0.], [1.]);')\n",
+    "cfg = produce_cfg_text(compiledFile)\n",
+    "\n",
+    "params_dict = {'alpha': 1.}\n",
+    "\n",
+    "start_smoother(cfg, params_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entry': EntryNode<>,\n",
+       " 'state0': StateNode<state0,None,x=gm([0.5,0.5],[0.,1.],[0.,0.]),smoothed:x=gm([0.5,0.5], [0.,1.], [0.0010000000, 0.0010000000])>,\n",
+       " 'state1': StateNode<state1,None,y=x+gm([1.],[0.],[1.])>,\n",
+       " 'exit': ExitNode<>}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg.node_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg.smoothed_vars"
    ]
   },
   {
@@ -28,10 +73,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "compiledFile=compile2SOGA('../programs/SOGA/Optimization/Optim5.soga')\n",
-    "cfg = produce_cfg(compiledFile)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
