--- a/src/Case Study - Lotka Volterra.ipynb
+++ b/src/Case Study - Lotka Volterra.ipynb
@@ -474,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "simple_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
