New smoother + renamed case studies
- Finished testing the new smoother. libSOGAsmoother is now obsolete and should not be used.
- Renamed case studies. Now the numbered case studies work, unnunbered ones still do not work. Moved obsolete notebooks to trash.

--- a/src/Case Study 4 - BayesianRegression.ipynb
+++ b/src/Case Study 4 - BayesianRegression.ipynb
@@ -11,11 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -23,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sogaPreprocessor import *\n",
     "from producecfg import *\n",
+    "from smoothcfg import *\n",
     "from libSOGA import *\n",
     "from time import time\n",
     "\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "Text(0.5, 1.0, 'Humidity vs Apparent Temperature')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -153,12 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "compiledFile=compile2SOGA('../programs/SOGA/Optimization/Case Studies/linear_regression.soga')\n",
     "cfg = produce_cfg(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
     "\n",
     "pars = {'w':-5., 'b':10.}\n",
     "\n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
       "w: -7.956006571256396 b: 20.83739751692093  loss: 11.558233784530273\n",
       "w: -7.956006631790004 b: 20.8373975524587  loss: 11.558233784530275\n",
       "w: -7.956006667199406 b: 20.83739757334375  loss: 11.558233784530275\n",
-      "Optimization performed in  32.392\n"
+      "Optimization performed in  37.821\n"
      ]
     }
    ],
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +270,7 @@
        "Text(0.5, 1.0, 'Humidity vs Apparent Temperature')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,13 +410,14 @@
       "muw: -7.955997934749539 mub: 20.83739243907072 sigmaw: 0.0016779496351095533 sigmab: 2.4039792947948384 sigmay: 2.4039792947948384  loss: 79.27912708508931\n",
       "muw: -7.956000063038359 mub: 20.83739369036291 sigmaw: 0.0014643720705828514 sigmab: 2.403979316742786 sigmay: 2.403979316742786  loss: 79.27912705711242\n",
       "muw: -7.9560016912136415 mub: 20.837394647626066 sigmaw: 0.001276339686575253 sigmab: 2.4039793335932305 sigmay: 2.4039793335932305  loss: 79.27912703562437\n",
-      "Optimization performed in  276.161\n"
+      "Optimization performed in  373.81\n"
      ]
     }
    ],
    "source": [
     "compiledFile=compile2SOGA('../programs/SOGA/Optimization/Case Studies/bayesian_linear_regression.soga')\n",
     "cfg = produce_cfg(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
     "\n",
     "pars = {'muw':-10., 'mub':10., 'sigmaw':1., 'sigmab':1., 'sigmay':1.}\n",
     "\n",
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +448,7 @@
        "Text(0.5, 1.0, 'Humidity vs Apparent Temperature')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +592,7 @@
       "sigmaw: -5.701625533675227e-23 sigmab: 2.403979443199366 sigmay: 2.4039794431993533  loss: 79.27912767117745\n",
       "sigmaw: -3.826589006927556e-22 sigmab: 2.403979443199366 sigmay: 2.4039794431993533  loss: 79.27912767117745\n",
       "sigmaw: -5.2887822483468544e-23 sigmab: 2.4039794431993657 sigmay: 2.4039794431993533  loss: 79.27912767117745\n",
-      "Optimization performed in  214.144\n"
+      "Optimization performed in  246.299\n"
      ]
     },
     {
@@ -599,7 +601,7 @@
        "Text(0.5, 1.0, 'Humidity vs Apparent Temperature')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -617,6 +619,7 @@
    "source": [
     "compiledFile=compile2SOGA('../programs/SOGA/Optimization/Case Studies/bayesian_linear_regression2.soga')\n",
     "cfg = produce_cfg(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
     "\n",
     "pars = {'sigmaw':1., 'sigmab':1., 'sigmay':1.}\n",
     "\n",
@@ -976,7 +979,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "simple_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -990,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
